--- a/auth/package.json
+++ b/auth/package.json
@@ -39,6 +39,6 @@
     "jest": "^27.3.1",
     "mongodb-memory-server": "^8.0.2",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.0.7",
-  },
+    "ts-jest": "^27.0.7"
+  }
 }
