--- a/payments/package.json
+++ b/payments/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watchAll --no-cache"
+    "test": "jest --watchAll --no-cache",
+    "test:ci": "jest"
+
   },
   "jest": {
     "preset": "ts-jest",
@@ -41,5 +43,10 @@
     "mongodb-memory-server": "^8.0.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "v4.4-latest"
+    }
   }
 }
